k8s/my-media-stack/clean_manifests_v2/cluster/mutatingwebhookconfigurations.admissionregistration.k8s.io/cert-manager-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from-secret: cert-manager/cert-manager-webhook-ca
    meta.helm.sh/release-name: cert-manager
    meta.helm.sh/release-namespace: cert-manager
  labels:
    app: webhook
    app.kubernetes.io/component: webhook
    app.kubernetes.io/instance: cert-manager
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: webhook
    app.kubernetes.io/version: v1.14.0
    helm.sh/chart: cert-manager-v1.14.0
  name: cert-manager-webhook
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJ3ekNDQVVpZ0F3SUJBZ0lSQVBSNjlPeERrSlU0U3lLZDdyY2dqanN3Q2dZSUtvWkl6ajBFQXdNd0lqRWcKTUI0R0ExVUVBeE1YWTJWeWRDMXRZVzVoWjJWeUxYZGxZbWh2YjJzdFkyRXdIaGNOTWpVd05qRTBNVFEwT0RJdwpXaGNOTWpZd05qRTBNVFEwT0RJd1dqQWlNU0F3SGdZRFZRUURFeGRqWlhKMExXMWhibUZuWlhJdGQyVmlhRzl2CmF5MWpZVEIyTUJBR0J5cUdTTTQ5QWdFR0JTdUJCQUFpQTJJQUJIM2ltWHdoTVZvcVJoR2huVmVIdElrTjVMdVoKL2pyMFZ1UDkvNVM0V0NTNVNOUytkWnF5MXVtWE9laTNMSDhrZ2hOSXRSUVFUZFlnai96TnAwNlBCVUhsZzVuUgpxVWJUUjlQUlVTVj [...]
    service:
      name: cert-manager-webhook
      namespace: cert-manager
      path: /mutate
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: webhook.cert-manager.io
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - cert-manager.io
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - certificaterequests
    scope: '*'
  sideEffects: None
  timeoutSeconds: 30
